<?xml version="1.0"?>
<package format="3">

  <name>fog_rviz_plugins</name>
  <version>0.0.0</version>
  <description>Plugins for rviz2</description>

  <author email="spurny@fly4future.com">Vojtech Spurny</author>
  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch_ros</exec_depend>  
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
