<?xml version="1.0"?>
<package format="3">

  <name>fog_rviz_plugins</name>
  <version>0.0.0</version>
  <description>Plugins for rviz2</description>

  <author email="spurny@fly4future.com">Vojtech Spurny</author>
  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>launch_ros</exec_depend>  
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins.xml"/>
  </export>

</package>
